# irmoroids

./: .gitignore  .lvimrc  Makefile.am  NEWS  README  autogen.sh  configure.in  mirror.rb
client/: .gitignore  Makefile  Makefile.am  gfx.c  main.c  mesh.h  mesh.l  models.c  models.h  net.c  net.h
common/: config.h  math-constants.h  models.h  net.h
interfaces/: Makefile.am  astro.if  astroclient.if  interfaces.h
models/: Makefile.am  missile1.mesh  rock1.mesh  ship1.mesh  ship2.mesh
server/: Makefile  Makefile.am  main.c  server.c  server.h  universe.c  universe.h  world.c  world.h
