AC_INIT(configure.in)

IRMOROIDS_VERSION="1.0.0"

AM_INIT_AUTOMAKE(irmoroids, $IRMOROIDS_VERSION, no-define)

AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC

AM_PROG_LEX
AM_PROG_LIBTOOL

PKG_CHECK_MODULES(IRMO, glib-2.0 >= 2.0.0 irmo >= 1.0.0)
AC_SUBST(IRMO_CFLAGS)
AC_SUBST(IRMO_LIBS)

AM_PATH_SDL(1.1.3,,)

AC_OUTPUT([
	Makefile
	client/Makefile
	server/Makefile
	interfaces/Makefile
	models/Makefile
])


