AC_INIT(configure.in)

IRMOROIDS_VERSION="1.2.0"

AM_INIT_AUTOMAKE(irmoroids, $IRMOROIDS_VERSION, no-define)

AC_PROG_CC
AC_PROG_INSTALL
AC_HEADER_STDC
AC_PROG_LIBTOOL

AM_PROG_LEX

PKG_CHECK_MODULES(IRMO, glib-2.0 >= 2.0.0 irmo >= 1.0.0)

CLIENT_SUBDIRS=""
CLIENT=""

AC_ARG_ENABLE(client,[  --enable-client         enable building the irmoroids client],[],[enable_client="yes"])

have_client=no

if test x$enable_client = xyes; then

	have_opengl=no
	AC_TRY_COMPILE([
		#include <GL/gl.h>
		#include <GL/glu.h>
	],[
	],[
		have_opengl=yes
	])

	if test x$have_opengl = xyes; then
		AM_PATH_SDL(1.1.3,[
			echo "SDL and OpenGL found. Building irmoroids client."
#			CLIENT_SUBDIRS="client models"
#                        CLIENT="irmoroids"
                        have_client=yes
		],[
			echo "SDL not found. Not building irmoroids client."
		])
	else
		echo "OpenGL not found. Not building irmoroids client."	
	fi
fi

AM_CONDITIONAL(HAVE_CLIENT, test x$have_client = xyes)

AC_SUBST(IRMO_CFLAGS)
AC_SUBST(IRMO_LIBS)
AC_SUBST(CLIENT_SUBDIRS)

AC_OUTPUT([
	Makefile
	client/Makefile
	server/Makefile
	interfaces/Makefile
	models/Makefile
])


